--- a/parts/client/blocks.jade
+++ b/parts/client/blocks.jade
@@ -515,7 +515,7 @@ template(name='author_block')
 template(name='kve')
     a.ui.compact.large.button.set_key_v.select_term(class=set_kv_class title=v href='#')
         if i
-            // +icon name=icon cl='ui avatar image'
+            // +icon n=icon cl='ui avatar image'
             i.icon(class=i)
         unless icon_only
             if l
