--- a/parts/credit.jade
+++ b/parts/credit.jade
@@ -5,14 +5,14 @@ template(name='user_credits')
     .ui.link.list.smallscroll
         each user_credits
             .item
-                if author.profile_image_id
-                    img.ui.avatar.image(src="{{c.url author.profile_image_id height=200 width=200 gravity='face' crop='fill'}}")
+                if _author.profile_image_id
+                    img.ui.avatar.image(src="{{c.url _author.profile_image_id height=200 width=200 gravity='face' crop='fill'}}")
                 strong #{amount}pt 
                 .content
                     a(href="/gift/#{_id}/view")
                         |#{when} from 
-                    a(href="/u/#{author.username}")
-                        |#{author.username}
+                    a(href="/u/#{_author.username}")
+                        |#{_author.username}
                 .content
                     .description
                         |#{description}
@@ -26,20 +26,20 @@ template(name='user_credits_small')
         i.minus.icon
         |#{total_credit_amount}p
         |received
-        .ui.basic.circular.label #{credit_count} credits
+        .ui.basic.label #{credit_count} credits
             | ##{global_credit_count_rank}
     div
     .ui.link.list.scrolling
         each user_credits
             .item
-                if author.profile_image_id
-                    img.ui.avatar.image(src="{{c.url author.profile_image_id height=200 width=200 gravity='face' crop='fill'}}")
+                if _author.profile_image_id
+                    img.ui.avatar.image(src="{{c.url _author.profile_image_id height=200 width=200 gravity='face' crop='fill'}}")
                 .content
                     .header
                         strong #{amount}pt 
                         |from 
-                        a(href="/u/#{author.username}")
-                            |#{author.username}
+                        a(href="/u/#{_author.username}")
+                            |#{_author.username}
                     .description
                         a(href="/gift/#{_id}/view")
                             |#{when}
