--- a/parts/delta/results.jade
+++ b/parts/delta/results.jade
@@ -107,7 +107,7 @@ template(name='delta_list_result')
 template(name='delta_result_table_row')
     tr.pointer.goto_doc
         //- if result.color_icon
-        //-     +icon name=result.color_icon
+        //-     +icon n=result.color_icon
         //- td
             //- |#{result.title}
         each visible_fields
