--- a/parts/project.jade
+++ b/parts/project.jade
@@ -64,7 +64,7 @@ template(name='project_edit')
         .ui.stackable.padded.grid
             .centered.middle.aligned.row 
                 .four.wide.center.aligned.column
-                    a.ui.green.big.icon.circular.button(href="/project/#{_id}/view" title='save')
+                    a.ui.green.big.icon.button(href="/project/#{_id}/view" title='save')
                         i.checkmark.big.icon
                 .eight.wide.center.aligned.column
                     .ui.inline.header 
