--- a/parts/client/fields.jade
+++ b/parts/client/fields.jade
@@ -37,7 +37,7 @@ template(name='icon_edit')
     div
     if icon
         //- i.grey.icon(class=icon)
-        +icon name=icon cl='ui avatar image'
+        +icon n=icon cl='ui avatar image'
     .ui.inline.header
         if t
             |#{t}
@@ -333,7 +333,7 @@ template(name='link_view')
     if fv
         div
         if icon
-            +icon name=icon cl='ui avatar image'
+            +icon n=icon cl='ui avatar image'
         //- .ui.inline.header 
         //-     |#{title} #{label}
         a.ui.header(href=fv target='_window')
@@ -347,7 +347,7 @@ template(name='image_view')
     if fv
         //- .ui.inline.header
         //-     if icon
-        //-         +icon name=icon
+        //-         +icon n=icon
                 //- i.grey.icon(class=icon)
         //-     if title
         //-         |#{title}
@@ -426,7 +426,7 @@ template(name='textarea_edit')
             label 
                 if icon
                     // i.icon(class=fv)
-                    +icon name=icon cl='ui avatar image'
+                    +icon n=icon cl='ui avatar image'
                 if title
                     |#{title}
                 else if label
@@ -443,7 +443,7 @@ template(name='text_edit')
     // div
     if icon
         //- i.grey.icon(class=icon)
-        +icon name=icon cl='ui avatar image'
+        +icon n=icon cl='ui avatar image'
     .ui.inline.small.header
         if t
             |#{t}
@@ -461,7 +461,7 @@ template(name='text_view')
         //- unless header
         //-     div
         //-     if icon
-        //-         +icon name=icon                
+        //-         +icon n=icon                
         .ui.inline.grey.small.header
             if title
                 |#{title}
@@ -480,7 +480,7 @@ template(name='array_edit')
     i.grey.tag.icon
     // if icon
     //     - i.grey.icon(class=icon)
-    //     +icon name=icon cl='ui avatar image'
+    //     +icon n=icon cl='ui avatar image'
     .ui.inline.header
         if title
             |#{t}
@@ -599,14 +599,14 @@ template(name='child_view')
 
 template(name='boolean_edit')
     //- div
-    .ui.circular.button.toggle_boolean(class="#{boolean_toggle_class} #{cl}" t=tooltip)
+    .ui.button.toggle_boolean(class="#{boolean_toggle_class} #{cl}" t=tooltip)
         if fv
             i.green.checkmark.large.invert.icon
         else
             i.circle.outline.icon
         //- .ui.compact.button.toggle_boolean(class=boolean_toggle_class)
         if i
-            +icon name=i cl='ui avatar image'
+            +icon n=i cl='ui avatar image'
         .inline.f12
             //- if fv
             //-     i.checkmark.icon
@@ -635,7 +635,7 @@ template(name='boolean_view')
         .ui.inline.grey.small.header
             if icon
                 //- i.grey.icon(class=icon)
-                +icon name=icon cl='ui inline mini image'
+                +icon n=icon cl='ui inline mini image'
             if t
                 |#{t}
             else if label
@@ -654,13 +654,13 @@ template(name='single_doc_view')
     if fv
         if icon
             //- i.grey.icon(class=icon)
-            +icon name=icon
+            +icon n=icon
         .ui.inline.header(t=key)
             |#{t}
         .ui.label
             if icon
                 //- i.grey.icon(class=icon)
-                +icon name=icon cl='ui avatar image'
+                +icon n=icon cl='ui avatar image'
             |#{fv}
             |#{doc.t}
 
@@ -678,7 +678,7 @@ template(name='single_doc_edit')
         .ui.compact.button.select_choice(class=choice_class)
             if icon
                 //- i.grey.icon(class=icon)
-                +icon name=icon cl='ui middle aligned mini image'
+                +icon n=icon cl='ui middle aligned mini image'
                 //- +i n=icon cl='ui mini inline image'
             |#{calculated_label} #{t}
             |#{slug}
@@ -696,7 +696,7 @@ template(name='single_tribe_edit')
 template(name='multi_doc_edit')
     div
     if icon
-        +icon name=icon cl='ui mini inline image'
+        +icon n=icon cl='ui mini inline image'
         +i n=icon cl='ui mini inline image'
     .ui.inline.header(t=key)
         |#{t} #{label}    
@@ -778,14 +778,14 @@ template(name='single_user_edit')
             .ui.inline.header
                 img.ui.avatar.image(src="{{c.url profile_image_id width=100 height=100 gravity='face' crop='fill'}}" class=currentUser.invert_class)
                 |#{username}
-            i.pull_user.remove.link.circular.icon
+            i.pull_user.remove.link.icon
 
 
 template(name='single_user_view')
     if fv
         div
         if icon
-            +icon name=icon    
+            +icon n=icon    
         .ui.inline.header 
             |#{t}
             |#{label}
@@ -835,7 +835,7 @@ template(name='multi_user_edit')
             .ui.inline.header
                 img.ui.avatar.image(src="{{c.url profile_image_id width=100 height=100 gravity='face' crop='fill'}}" class=currentUser.invert_class)
                 |#{username}
-            i.pull_user.remove.link.circular.icon
+            i.pull_user.remove.link.icon
 
 template(name='multi_doc_input')
     //- .ui.form
