--- a/parts/delta/delta.jade
+++ b/parts/delta/delta.jade
@@ -34,7 +34,7 @@ template(name='delta')
                                         each sortable_fields
                                             .item.set_sort_key 
                                                 if icon 
-                                                    +icon name=icon
+                                                    +icon n=icon
                                                 |#{title}
                                 .ui.tertiary.icon.button.set_sort_direction(title='sort direction')
                                     if sorting_up
@@ -149,7 +149,7 @@ template(name='model_top')
     else
         unless kv_is cd.model_filter 'model'
             if is_admin
-                a.ui.icon.basic.compact.circular.button.go_home
+                a.ui.icon.basic.compact.button.go_home
                     i.big.home.icon
         a.ui.inline.large.header.reset(title="#{description}, #{views} views")
             // +i n=icon
@@ -163,22 +163,22 @@ template(name='model_top')
             unless kv_is cd.model_filter 'model'
                 unless kv_is current_model.collection 'user'
                     // if is_admin
-                    i.plus.large.green.circular.link.icon.add_model_doc(title="add #{slug}")
+                    i.plus.large.green.link.icon.add_model_doc(title="add #{slug}")
             else 
                 if is_admin
-                    .ui.icon.basic.circular.button.add_model_doc(title="add #{slug}")
+                    .ui.icon.basic.button.add_model_doc(title="add #{slug}")
                         i.plus.large.green.icon
         +user_list_toggle k='bookmark_ids' add_i='bookmark outline' remove_i='bookmark' label="bookmark"
         if is_admin
-            i.cog.large.circular.link.icon.edit_model(title='edit model')
+            i.cog.large.link.icon.edit_model(title='edit model')
         if cd
             // if is_admin
             if is_dev
-                i.refresh.link.reset.grey.circular.icon(title='reload session')
+                i.refresh.link.reset.grey.icon(title='reload session')
                 i.code.link.icon.print_delta(title='print session doc')
                 i.trash.delete_delta.link.icon(title='delete session')
         else
-            .create_delta.ui.big.green.circular.button(title='new session')
+            .create_delta.ui.big.green.button(title='new session')
                 i.plus.icon
                 |start your session
             
@@ -239,7 +239,7 @@ template(name='facet')
         if viewing_results
             each filtering_res
                 // if name
-                a.selector.ui.compact.basic.circular.button.toggle_selection.select_term(class=toggle_value_class title=count)
+                a.selector.ui.compact.basic.button.toggle_selection.select_term(class=toggle_value_class title=count)
                     //- with ..
                     //- if parent_kv_is 'field_type' 'color_icon'
                     //-     .ui.header icon
@@ -248,7 +248,7 @@ template(name='facet')
                     if is_admin
                         small #{cal_count} #{count}
                 // else
-                //     a.selector.ui.compact.basic.circular.button.toggle_selection(class=toggle_value_class)
+                //     a.selector.ui.compact.basic.button.toggle_selection(class=toggle_value_class)
                 //         strong none/false
                 //         //- small #{cal_count}
             //- .ui.hidden.divider
