--- a/parts/delta/doc_view.jade
+++ b/parts/delta/doc_view.jade
@@ -6,12 +6,12 @@ template(name='model_doc_view')
             .ui.stackable.padded.grid
                 .row
                     .four.wide.column
-                        .ui.circular.basic.large.button.back_to_model
+                        .ui.basic.large.button.back_to_model
                             i.chevron.left.icon
                             i.big.icon(class=current_model.icon)
                             |#{current_model.title}
                         if can_edit
-                            a.ui.large.icon.circular.button(href="/m/#{current_model.slug}/#{_id}/edit" title='Edit')
+                            a.ui.large.icon.button(href="/m/#{current_model.slug}/#{_id}/edit" title='Edit')
                                 i.pencil.blue.large.icon
                         if is_admin
                             .ui.header 
