--- a/parts/delta/model_edit.jade
+++ b/parts/delta/model_edit.jade
@@ -12,9 +12,9 @@ template(name='model_edit_layout')
                     |created
                     +creation_info
                     div
-                    a.ui.big.icon.green.circular.button(href="/m/#{slug}")
+                    a.ui.big.icon.green.button(href="/m/#{slug}")
                         i.big.checkmark.icon
-                    i#delete_model.trash.red.circular.link.icon
+                    i#delete_model.trash.red.link.icon
                     // .ui.divider
                     +boolean_edit k='show_filter_bar' l='show filter bar' d=true
                     +boolean_edit k='show_facets' l='show facets' d=true
@@ -84,7 +84,7 @@ template(name='field_edit')
         a.title.field_edit(href="#")
             |#{rank}
             if icon
-                +icon name=icon cl='ui mini inline image'
+                +icon n=icon cl='ui mini inline image'
                 //- i.icon(class=icon)
             .ui.inline.header #{title}
             .ui.label #{field_type}
