--- a/parts/inbox.jade
+++ b/parts/inbox.jade
@@ -5,7 +5,7 @@ template(name='inbox')
                 .ui.header 
                     i.big.inbox.icon
                     |inbox
-                .ui.basic.big.compact.circular.button.add_message
+                .ui.basic.big.compact.button.add_message
                     i.chat.blue.icon
                     |+ message
             .six.wide.column
@@ -34,10 +34,10 @@ template(name='inbox')
                 .ui.list.medscroll
                     each my_received_messages
                         .item
-                            img.ui.avatar.image(src="{{c.url author.profile_image_id height=100 width=200}}" class=currentUser.invert_class)
+                            img.ui.avatar.image(src="{{c.url _author.profile_image_id height=100 width=200}}" class=currentUser.invert_class)
                             .content
                                 .header
-                                    |#{when} from #{author.name}
+                                    |#{when} from #{_author.name}
                                 |#{description} #{body}
                                 .meta    
                                     a(href="/m/message/#{_id}/view")
@@ -50,6 +50,6 @@ template(name='inbox')
                                 
 template(name='toggle_view_icon')
     if is_read
-        i.eye.circular.link.grey.icon.mark_unread(title='mark unread')
+        i.eye.link.grey.icon.mark_unread(title='mark unread')
     else
-        i.eye.circular.link.large.icon.mark_read(title='mark read')
+        i.eye.link.large.icon.mark_read(title='mark read')
